# gpsServer

./: CMakeLists.txt  main.cpp  main.hpp  tracker.proto
.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
Header Servers/: client.hpp  globals.hpp  mysql.hpp  server.hpp  sql.txt  tracker.pb.hpp
Header Servers — копия/: client.hpp  globals.hpp  mysql.hpp  server.hpp  tracker.hpp
Header Views — копия/: button_tab_bar.hpp  buttons.hpp  custom_style.hpp  main_window.h  main_window.hpp  servers_navigator.hpp  tabbar.hpp  toolbar.hpp  types_server.hpp  workspace.hpp  workspace_profile.hpp  workspace_protocol.hpp  workspace_server.hpp  workspace_settings.hpp
Source Servers/: client.cpp  globals.cpp  mysql.cpp  server.cpp  tracker.pb.cpp
Source Servers — копия/: client.cpp  globals.cpp  mysql.cpp  server.cpp  tracker.cpp
Source Views — копия/: button_tab_bar.cpp  buttons.cpp  controller.cpp  custom_style.cpp  mainWindow.cpp  servers_navigator.cpp  tabbar.cpp  toolbar.cpp  types_server.cpp  workspace.cpp  workspace_protocol.cpp  workspace_server.cpp  workspace_settings.cpp  worskspace_profile.cpp
serverGPS/: client.hpp  globals.h  main  main.cpp  mysql.hpp  server.hpp
serverGPS.xcodeproj/: project.pbxproj
serverGPS.xcodeproj/project.xcworkspace/xcuserdata/developmarin.xcuserdatad/: UserInterfaceState.xcuserstate
serverGPS.xcodeproj/xcuserdata/developmarin.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
serverGPS.xcodeproj/xcuserdata/developmarin.xcuserdatad/xcschemes/: xcschememanagement.plist
